# okfasta

./: README.md  pyproject.toml  setup.cfg  setup.py
okfastalib/: command.py  fasta.py  msa.py  nucleotide.py  parse.py  seqs.py  util.py
okfastalib/test/: test_command.py  test_fasta.py  test_msa.py  test_nucleotide.py  test_parse.py  test_seqs.py  test_util.py
okfastalib/test/data/: ruminococcus.fasta
src/okfastalib/: command.py  io.py  msa.py  nucleotide.py  seqs.py
src/okfastalib/test/: test_command.py  test_fasta.py  test_io.py  test_msa.py  test_nucleotide.py  test_seqs.py
src/okfastalib/test/data/: ruminococcus_aligned.fasta
